modules/firewall/main.tf
# Allow LB health checks
resource "google_compute_firewall" "allow_lb_health_check" {
  name    = "allow-lb-health-check"
  network = var.network_name

  allow {
    protocol = "tcp"
    ports    = ["80", "443", "8080"]
  }

  source_ranges = ["130.211.0.0/22", "35.191.0.0/16"]
}

# DB Ingress firewall rule (allow internal network to talk to DB)
resource "google_compute_firewall" "db_ingress" {
  name    = "allow-db-ingress"
  network = var.network_name

  allow {
    protocol = "tcp"
    ports    = ["5432", "3306", "27017"] # Common DB ports
  }

  source_ranges = ["10.0.0.0/8"]
  target_tags   = ["db"]
}

# Allow SSH ingress (restricted to IAP)
resource "google_compute_firewall" "allow_ssh" {
  name    = "allow-ssh-ingress"
  network = var.network_name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["35.235.240.0/20"]
  target_tags   = ["ssh-allow"]
}
